--- a/Covid19/Covid19/Covid19.csproj
+++ b/Covid19/Covid19/Covid19.csproj
@@ -179,6 +179,8 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Helpers\Commons.cs" />
+    <Compile Include="Models\Covid19Model.cs" />
     <Compile Include="ViewModels\ForeignCountryViewModel.cs" />
     <Compile Include="ViewModels\KoreaViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
@@ -220,10 +222,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Helpers\" />
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.1.3\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.1.3\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
